--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   </div>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.0.0/codemirror.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.0.0/mode/javascript/javascript.min.js"></script>
-  <script type="text/javascript" src="/demo/assets/bundle.js"></script>
+  <script type="text/javascript" src="dist/bundle.js"></script>
 </body>
 </html>
